--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
