--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "homepage": "https://MariaStreltsova.github.io/fs44-react-team-proj/",
   "dependencies": {
+    "@coreui/react": "^4.4.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
-    "@mui/material": "^5.10.14",
+    "@mui/material": "^5.10.15",
     "@mui/styled-engine-sc": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
+    "chart.js": "^4.0.1",
     "classnames": "^2.3.2",
     "flag-icons": "^6.6.6",
     "formik": "^2.2.9",
@@ -22,7 +24,9 @@
     "js-cookie": "^3.0.1",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
+    "rc-select": "^14.1.14",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.1.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
