--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/styled-engine-sc": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.0",
+    "@userfront/core": "^0.4.6",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "flag-icons": "^6.6.6",
