--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.1.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
