--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
-    "date-fns": "^2.29.3",
+    "fecha": "^4.2.3",
     "flag-icons": "^6.6.6",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
