--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MariaStreltsova.github.io/fs44-react-team-proj/",
   "dependencies": {
     "@coreui/react": "^4.4.0",
     "@emotion/react": "^11.10.5",
@@ -49,7 +48,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint src/**/*.{js,jsx}"
+    "lint:js": "eslint src/**/*.{js,jsx}",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy -p"
+    
   },
   "eslintConfig": {
     "extends": [
